{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 31,
  "lineage": "fdbb4ffd-cbc2-b0fa-261d-6dd282a91b60",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:internet-gateway/igw-0453fddfc2f60ede3",
            "id": "igw-0453fddfc2f60ede3",
            "owner_id": "196565052768",
            "tags": {
              "Name": "terrsform-igw"
            },
            "tags_all": {
              "Name": "terrsform-igw"
            },
            "vpc_id": "vpc-0a2283b41b84bc0fa"
          },
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:route-table/rtb-0c6542c281dc1f7f2",
            "id": "rtb-0c6542c281dc1f7f2",
            "owner_id": "196565052768",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private RT"
            },
            "tags_all": {
              "Name": "Private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2283b41b84bc0fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:route-table/rtb-0d51310e7eef0e9df",
            "id": "rtb-0d51310e7eef0e9df",
            "owner_id": "196565052768",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0453fddfc2f60ede3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public RT"
            },
            "tags_all": {
              "Name": "Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2283b41b84bc0fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074cc1353d5481e5c",
            "route_table_id": "rtb-0c6542c281dc1f7f2",
            "subnet_id": "subnet-0ef70e320754d5d80"
          },
          "dependencies": [
            "aws_route_table.PrivateRoute",
            "aws_subnet.privateSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b73b4411757f3431",
            "route_table_id": "rtb-0d51310e7eef0e9df",
            "subnet_id": "subnet-0600983276a0f0edc"
          },
          "dependencies": [
            "aws_route_table.PublicRoute",
            "aws_subnet.publicSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:subnet/subnet-0ef70e320754d5d80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ef70e320754d5d80",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196565052768",
            "tags": {
              "Name": "PrivateSubnet"
            },
            "tags_all": {
              "Name": "PrivateSubnet"
            },
            "vpc_id": "vpc-0a2283b41b84bc0fa"
          },
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:subnet/subnet-0600983276a0f0edc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0600983276a0f0edc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196565052768",
            "tags": {
              "Name": "PublicSubnet"
            },
            "tags_all": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-0a2283b41b84bc0fa"
          },
          "dependencies": [
            "aws_vpc.DemoVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DemoVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:vpc/vpc-0a2283b41b84bc0fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06a042beef0b75791",
            "default_route_table_id": "rtb-02af0c29fa02fb735",
            "default_security_group_id": "sg-045a2e838340b6a06",
            "dhcp_options_id": "dopt-cd19aba6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a2283b41b84bc0fa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02af0c29fa02fb735",
            "owner_id": "196565052768",
            "tags": {
              "Name": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}